--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon projects/node-basics/app.js",
-    "dev": "nodemon projects/node-basics/app.js"
+    "start": "nodemon assignements/third-assignement/app.js",
+    "dev": "nodemon assignements/third-assignement/app.js"
   },
   "repository": {
     "type": "git",
@@ -29,5 +28,9 @@
   "homepage": "https://github.com/LucaHermann/Node#readme",
   "devDependencies": {
     "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "express": "^4.21.2"
   }
 }
