Refactor project structure and implement dynamic content routing
- Updated package.json to point to the new app.js location.
- Created new Express application in projects/dynamic-content-&-templates/app.js.
- Added routing for admin and shop functionalities with corresponding views.
- Implemented 404 error handling.
- Introduced utility path module for cleaner path management.
- Added package-lock.json and package.json for the new project structure.
- Created HTML views for shop and add-product pages, along with a 404 error page.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon assignements/third-assignement/app.js",
-    "dev": "nodemon assignements/third-assignement/app.js"
+    "start": "nodemon projects/dynamic-content-&-templates/app.js",
+    "dev": "nodemon projects/dynamic-content-&-templates/app.js"
   },
   "repository": {
     "type": "git",
