--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon assignements/third-assignement/app.js",
-    "dev": "nodemon assignements/third-assignement/app.js"
+    "start": "nodemon projects/MVC/app.js",
+    "dev": "nodemon projects/MVC/app.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,9 @@
   },
   "dependencies": {
     "body-parser": "^1.20.3",
-    "express": "^4.21.2"
+    "ejs": "^2.7.4",
+    "express": "^4.21.2",
+    "express-handlebars": "^3.0.0",
+    "pug": "^2.0.3"
   }
 }
